--- a/Fooldal.css
+++ b/Fooldal.css
@@ -76,7 +76,7 @@ div:nth-child(even) > h2{
 /* table{
     margin: auto;
 } */
-table, th, td{
+th, td{
     border: 2px darkred solid;
     border-collapse: collapse;
 }
@@ -251,7 +251,7 @@ a:hover.Tagok{
 }*/
 footer{
     background-color: white;
-    margin-top: 10px;
+    margin-top: 100px;
     border: black 2px solid;
     padding-top: 10px;
     padding-bottom: 10px;
